--- a/GPP_Framework.vcxproj
+++ b/GPP_Framework.vcxproj
@@ -321,12 +321,8 @@
     <ClCompile Include="framework\EliteWindow\SDLWindow\SDLWindow.cpp" />
     <ClCompile Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.c" />
     <ClCompile Include="framework\main.cpp" />
-    <ClCompile Include="projects\App_BehaviorTree\App_AgarioGame_BT.cpp" />
-    <ClCompile Include="projects\App_FiniteStateMachine\App_AgarioGame.cpp" />
-    <ClCompile Include="projects\App_FiniteStateMachine\StatesAndTransitions.cpp" />
+    <ClCompile Include="projects\App_FlowFields\App_PathfindingFlowFields.cpp" />
     <ClCompile Include="projects\App_GraphTheory\App_GraphTheory.cpp" />
-    <ClCompile Include="projects\App_InfluenceMap\App_InfluenceMap.cpp" />
-    <ClCompile Include="projects\App_MachineLearning\App_MachineLearning.cpp" />
     <ClCompile Include="projects\App_NavMeshGraph\App_NavMeshGraph.cpp" />
     <ClCompile Include="projects\App_PathfindingAStar\App_PathfindingAStar.cpp" />
     <ClCompile Include="projects\App_Sandbox\App_Sandbox.cpp" />
@@ -426,13 +422,8 @@
     <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.h" />
     <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\glcorearb.h" />
     <ClInclude Include="framework\EliteInterfaces\EIApp.h" />
-    <ClInclude Include="projects\App_BehaviorTree\App_AgarioGame_BT.h" />
-    <ClInclude Include="projects\App_BehaviorTree\Behaviors.h" />
-    <ClInclude Include="projects\App_FiniteStateMachine\App_AgarioGame.h" />
-    <ClInclude Include="projects\App_FiniteStateMachine\StatesAndTransitions.h" />
+    <ClInclude Include="projects\App_FlowFields\App_PathfindingFlowFields.h" />
     <ClInclude Include="projects\App_GraphTheory\App_GraphTheory.h" />
-    <ClInclude Include="projects\App_InfluenceMap\App_InfluenceMap.h" />
-    <ClInclude Include="projects\App_MachineLearning\App_MachineLearning.h" />
     <ClInclude Include="projects\App_NavMeshGraph\App_NavMeshGraph.h" />
     <ClInclude Include="projects\App_PathfindingAStar\App_PathfindingAStar.h" />
     <ClInclude Include="projects\App_Sandbox\App_Sandbox.h" />
