--- a/GPP_Framework.vcxproj.filters
+++ b/GPP_Framework.vcxproj.filters
@@ -38,21 +38,17 @@
     <ClCompile Include="projects\App_NavMeshGraph\App_NavMeshGraph.cpp" />
     <ClCompile Include="projects\Shared\NavigationColliderElement.cpp" />
     <ClCompile Include="framework\EliteAI\EliteDecisionMaking\EliteFiniteStateMachine\EFiniteStateMachine.cpp" />
-    <ClCompile Include="projects\App_FiniteStateMachine\App_AgarioGame.cpp" />
-    <ClCompile Include="projects\App_FiniteStateMachine\StatesAndTransitions.cpp" />
     <ClCompile Include="projects\Shared\Agario\AgarioAgent.cpp" />
     <ClCompile Include="projects\Shared\Agario\AgarioContactListener.cpp" />
     <ClCompile Include="projects\Shared\Agario\AgarioFood.cpp" />
     <ClCompile Include="framework\EliteAI\EliteDecisionMaking\EliteBehaviorTree\EBehaviorTree.cpp" />
-    <ClCompile Include="projects\App_BehaviorTree\App_AgarioGame_BT.cpp" />
     <ClCompile Include="framework\EliteAI\EliteGraphs\EInfluenceMap.cpp" />
-    <ClCompile Include="projects\App_InfluenceMap\App_InfluenceMap.cpp" />
-    <ClCompile Include="projects\App_MachineLearning\App_MachineLearning.cpp" />
     <ClCompile Include="framework\EliteQLearning\QLearning.cpp" />
     <ClCompile Include="framework\EliteQLearning\DynamicQLearning.cpp" />
     <ClCompile Include="framework\EliteQLearning\Food.cpp" />
     <ClCompile Include="framework\EliteQLearning\QBot.cpp" />
     <ClCompile Include="framework\EliteMath\FMatrix.cpp" />
+    <ClCompile Include="projects\App_FlowFields\App_PathfindingFlowFields.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="projects\App_Selector.h" />
@@ -138,18 +134,12 @@
     <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EliteFiniteStateMachine\EFiniteStateMachine.h" />
     <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EDecisionMaking.h" />
     <ClInclude Include="framework\EliteAI\EliteData\EBlackboard.h" />
-    <ClInclude Include="projects\App_FiniteStateMachine\App_AgarioGame.h" />
-    <ClInclude Include="projects\App_FiniteStateMachine\StatesAndTransitions.h" />
     <ClInclude Include="projects\Shared\Agario\AgarioAgent.h" />
     <ClInclude Include="projects\Shared\Agario\AgarioContactListener.h" />
     <ClInclude Include="projects\Shared\Agario\AgarioData.h" />
     <ClInclude Include="projects\Shared\Agario\AgarioFood.h" />
     <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EliteBehaviorTree\EBehaviorTree.h" />
-    <ClInclude Include="projects\App_BehaviorTree\App_AgarioGame_BT.h" />
-    <ClInclude Include="projects\App_BehaviorTree\Behaviors.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EInfluenceMap.h" />
-    <ClInclude Include="projects\App_InfluenceMap\App_InfluenceMap.h" />
-    <ClInclude Include="projects\App_MachineLearning\App_MachineLearning.h" />
     <ClInclude Include="framework\EliteQLearning\QLearning.h" />
     <ClInclude Include="framework\EliteQLearning\QBot.h" />
     <ClInclude Include="framework\EliteQLearning\DynamicQLearningb.h" />
@@ -157,6 +147,7 @@
     <ClInclude Include="framework\EliteQLearning\DynamicQLearning.h" />
     <ClInclude Include="framework\EliteQLearning\Food.h" />
     <ClInclude Include="framework\EliteMath\FMatrix.h" />
+    <ClInclude Include="projects\App_FlowFields\App_PathfindingFlowFields.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="imgui.ini" />
