--- a/GPP_Framework.vcxproj
+++ b/GPP_Framework.vcxproj
@@ -295,51 +295,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="framework\EliteAI\EliteDecisionMaking\EliteBehaviorTree\EBehaviorTree.cpp" />
-    <ClCompile Include="framework\EliteAI\EliteDecisionMaking\EliteFiniteStateMachine\EFiniteStateMachine.cpp" />
     <ClCompile Include="framework\EliteAI\EliteGraphs\EGraphConnectionTypes.cpp" />
     <ClCompile Include="framework\EliteAI\EliteGraphs\EGraphNodeTypes.cpp" />
-    <ClCompile Include="framework\EliteAI\EliteGraphs\EInfluenceMap.cpp" />
     <ClCompile Include="framework\EliteAI\EliteGraphs\EliteGraphUtilities\EGraphEditor.cpp" />
     <ClCompile Include="framework\EliteAI\EliteGraphs\EliteGraphUtilities\EGraphRenderer.cpp" />
-    <ClCompile Include="framework\EliteAI\EliteGraphs\ENavGraph.cpp" />
     <ClCompile Include="framework\EliteGeometry\EGeometry2DTypes.cpp" />
     <ClCompile Include="framework\EliteInput\EInputManager.cpp" />
     <ClCompile Include="framework\EliteMath\EMatrix2x3.cpp" />
     <ClCompile Include="framework\EliteMath\FMatrix.cpp" />
-    <ClCompile Include="framework\ElitePhysics\Box2DIntegration\ERigidBodyBox2D.cpp" />
     <ClCompile Include="framework\ElitePhysics\Box2DIntegration\EPhysicsWorldBox2D.cpp" />
-    <ClCompile Include="framework\EliteQLearning\DynamicQLearning.cpp" />
-    <ClCompile Include="framework\EliteQLearning\Food.cpp" />
-    <ClCompile Include="framework\EliteQLearning\QBot.cpp" />
-    <ClCompile Include="framework\EliteQLearning\QLearning.cpp" />
+    <ClCompile Include="framework\ElitePhysics\Box2DIntegration\ERigidBodyBox2D.cpp" />
     <ClCompile Include="framework\EliteRendering\2DCamera\ECamera2D.cpp" />
     <ClCompile Include="framework\EliteRendering\SDLIntegration\SDLDebugRenderer2D\SDLDebugRenderer2D.cpp" />
     <ClCompile Include="framework\EliteRendering\SDLIntegration\SDLFrame\SDLFrame.cpp" />
+    <ClCompile Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.c" />
     <ClCompile Include="framework\EliteTimer\SDLTimer\ETimer_SDL.cpp" />
     <ClCompile Include="framework\EliteUI\EImmediateUI.cpp" />
     <ClCompile Include="framework\EliteWindow\SDLWindow\SDLWindow.cpp" />
-    <ClCompile Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.c" />
     <ClCompile Include="framework\main.cpp" />
     <ClCompile Include="projects\App_FlowFields\App_PathfindingFlowFields.cpp" />
-    <ClCompile Include="projects\App_GraphTheory\App_GraphTheory.cpp" />
-    <ClCompile Include="projects\App_NavMeshGraph\App_NavMeshGraph.cpp" />
-    <ClCompile Include="projects\App_PathfindingAStar\App_PathfindingAStar.cpp" />
-    <ClCompile Include="projects\App_Sandbox\App_Sandbox.cpp" />
-    <ClCompile Include="projects\App_Sandbox\SandboxAgent.cpp" />
-    <ClCompile Include="projects\App_Steering\Behaviors\App_SteeringBehaviors.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\App_CombinedSteering.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\App_Flocking.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\CombinedSteeringBehaviors.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\FlockingSteeringBehaviors.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\SpacePartitioning.cpp" />
-    <ClCompile Include="projects\App_Steering\CombinedBehaviors\TheFlock.cpp" />
-    <ClCompile Include="projects\App_Steering\Obstacle.cpp" />
-    <ClCompile Include="projects\App_Steering\SteeringAgent.cpp" />
-    <ClCompile Include="projects\App_Steering\SteeringBehaviors.cpp" />
-    <ClCompile Include="projects\Shared\Agario\AgarioAgent.cpp" />
-    <ClCompile Include="projects\Shared\Agario\AgarioContactListener.cpp" />
-    <ClCompile Include="projects\Shared\Agario\AgarioFood.cpp" />
     <ClCompile Include="projects\Shared\BaseAgent.cpp" />
     <ClCompile Include="projects\Shared\NavigationColliderElement.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -350,68 +324,59 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework\EliteAI\EliteData\EBlackboard.h" />
-    <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EDecisionMaking.h" />
-    <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EliteBehaviorTree\EBehaviorTree.h" />
-    <ClInclude Include="framework\EliteAI\EliteDecisionMaking\EliteFiniteStateMachine\EFiniteStateMachine.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EGraph2D.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EGraphConnectionTypes.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EGraphEnums.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EGraphNodeTypes.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EGridGraph.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EIGraph.h" />
-    <ClInclude Include="framework\EliteAI\EliteGraphs\EInfluenceMap.h" />
-    <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphAlgorithms\EAStar.h" />
-    <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphAlgorithms\EBFS.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphAlgorithms\EEularianPath.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphUtilities\EGraphEditor.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphUtilities\EGraphRenderer.h" />
     <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphUtilities\EGraphVisuals.h" />
-    <ClInclude Include="framework\EliteAI\EliteGraphs\ENavGraph.h" />
     <ClInclude Include="framework\EliteAI\EliteNavigation\Algorithms\EPathSmoothing.h" />
     <ClInclude Include="framework\EliteAI\EliteNavigation\EHeuristicFunctions.h" />
     <ClInclude Include="framework\EliteAI\EliteNavigation\ENavigation.h" />
-    <ClInclude Include="framework\EliteHelpers\EMulticastDelegate.h" />
-    <ClInclude Include="framework\EliteHelpers\EMemoryPool.h" />
-    <ClInclude Include="framework\EliteHelpers\EMemoryPoolHelpers.h" />
-    <ClInclude Include="framework\EliteHelpers\ESingleton.h" />
-    <ClInclude Include="framework\EliteInput\EInputData.h" />
-    <ClInclude Include="framework\EliteInput\EInputManager.h" />
-    <ClInclude Include="framework\EliteInput\EInputCodes.h" />
-    <ClInclude Include="framework\EliteMath\EMatrix2x3.h" />
-    <ClInclude Include="framework\EliteMath\FMatrix.h" />
-    <ClInclude Include="framework\ElitePhysics\Box2DIntegration\Box2DRenderer.h" />
-    <ClInclude Include="framework\EliteQLearning\DynamicQLearning.h" />
-    <ClInclude Include="framework\EliteQLearning\DynamicQLearningb.h" />
-    <ClInclude Include="framework\EliteQLearning\Food.h" />
-    <ClInclude Include="framework\EliteQLearning\Foodb.h" />
-    <ClInclude Include="framework\EliteQLearning\QBot.h" />
-    <ClInclude Include="framework\EliteQLearning\QLearning.h" />
-    <ClInclude Include="framework\EliteRendering\2DCamera\ECamera2D.h" />
-    <ClInclude Include="framework\EliteRendering\EDebugRenderer2D.h" />
-    <ClInclude Include="framework\EliteRendering\ERendering.h" />
-    <ClInclude Include="framework\EliteRendering\EFrameBase.h" />
-    <ClInclude Include="framework\EliteRendering\ERenderingTypes.h" />
-    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLDebugRenderer2D\SDLDebugRenderer2D.h" />
-    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLFrame\SDLFrame.h" />
-    <ClInclude Include="framework\EliteRendering\Shaders.h" />
-    <ClInclude Include="framework\EliteTimer\ETimer.h" />
-    <ClInclude Include="framework\EliteUI\EImmediateUI.h" />
-    <ClInclude Include="framework\EliteWindow\EWindow.h" />
-    <ClInclude Include="framework\EliteWindow\EWindowBase.h" />
     <ClInclude Include="framework\EliteGeometry\EGeometry.h" />
     <ClInclude Include="framework\EliteGeometry\EGeometry2DTypes.h" />
     <ClInclude Include="framework\EliteGeometry\EGeometry2DUtilities.h" />
+    <ClInclude Include="framework\EliteHelpers\EMemoryPool.h" />
+    <ClInclude Include="framework\EliteHelpers\EMemoryPoolHelpers.h" />
+    <ClInclude Include="framework\EliteHelpers\EMulticastDelegate.h" />
+    <ClInclude Include="framework\EliteHelpers\ESingleton.h" />
+    <ClInclude Include="framework\EliteInput\EInputCodes.h" />
+    <ClInclude Include="framework\EliteInput\EInputData.h" />
+    <ClInclude Include="framework\EliteInput\EInputManager.h" />
+    <ClInclude Include="framework\EliteInterfaces\EIApp.h" />
     <ClInclude Include="framework\EliteMath\EMat22.h" />
     <ClInclude Include="framework\EliteMath\EMath.h" />
     <ClInclude Include="framework\EliteMath\EMathUtilities.h" />
+    <ClInclude Include="framework\EliteMath\EMatrix2x3.h" />
     <ClInclude Include="framework\EliteMath\EVector2.h" />
     <ClInclude Include="framework\EliteMath\EVector3.h" />
+    <ClInclude Include="framework\EliteMath\FMatrix.h" />
+    <ClInclude Include="framework\ElitePhysics\Box2DIntegration\Box2DRenderer.h" />
     <ClInclude Include="framework\ElitePhysics\EPhysics.h" />
     <ClInclude Include="framework\ElitePhysics\EPhysicsShapes.h" />
     <ClInclude Include="framework\ElitePhysics\EPhysicsTypes.h" />
     <ClInclude Include="framework\ElitePhysics\EPhysicsWorldBase.h" />
     <ClInclude Include="framework\ElitePhysics\ERigidBodyBase.h" />
+    <ClInclude Include="framework\EliteQLearning\DynamicQLearningb.h" />
+    <ClInclude Include="framework\EliteQLearning\Foodb.h" />
+    <ClInclude Include="framework\EliteRendering\2DCamera\ECamera2D.h" />
+    <ClInclude Include="framework\EliteRendering\EDebugRenderer2D.h" />
+    <ClInclude Include="framework\EliteRendering\EFrameBase.h" />
+    <ClInclude Include="framework\EliteRendering\ERendering.h" />
+    <ClInclude Include="framework\EliteRendering\ERenderingTypes.h" />
+    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLDebugRenderer2D\SDLDebugRenderer2D.h" />
+    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLFrame\SDLFrame.h" />
+    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.h" />
+    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\glcorearb.h" />
+    <ClInclude Include="framework\EliteRendering\Shaders.h" />
+    <ClInclude Include="framework\EliteTimer\ETimer.h" />
+    <ClInclude Include="framework\EliteUI\EImmediateUI.h" />
+    <ClInclude Include="framework\EliteWindow\EWindow.h" />
+    <ClInclude Include="framework\EliteWindow\EWindowBase.h" />
     <ClInclude Include="framework\EliteWindow\SDLWindow\SDLWindow.h" />
     <ClInclude Include="framework\math\CoreDefines.h" />
     <ClInclude Include="framework\math\EMat22.h" />
@@ -419,36 +384,15 @@
     <ClInclude Include="framework\math\EMathUtilities.h" />
     <ClInclude Include="framework\math\EVector2.h" />
     <ClInclude Include="framework\math\EVector3.h" />
-    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\gl3w.h" />
-    <ClInclude Include="framework\EliteRendering\SDLIntegration\SDLHelpers\glcorearb.h" />
-    <ClInclude Include="framework\EliteInterfaces\EIApp.h" />
     <ClInclude Include="projects\App_FlowFields\App_PathfindingFlowFields.h" />
-    <ClInclude Include="projects\App_GraphTheory\App_GraphTheory.h" />
-    <ClInclude Include="projects\App_NavMeshGraph\App_NavMeshGraph.h" />
-    <ClInclude Include="projects\App_PathfindingAStar\App_PathfindingAStar.h" />
-    <ClInclude Include="projects\App_Sandbox\App_Sandbox.h" />
-    <ClInclude Include="projects\App_Sandbox\SandboxAgent.h" />
     <ClInclude Include="projects\App_Selector.h" />
-    <ClInclude Include="projects\App_Steering\Behaviors\App_SteeringBehaviors.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\App_CombinedSteering.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\App_Flocking.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\CombinedSteeringBehaviors.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\FlockingSteeringBehaviors.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\SpacePartitioning.h" />
-    <ClInclude Include="projects\App_Steering\CombinedBehaviors\TheFlock.h" />
-    <ClInclude Include="projects\App_Steering\Obstacle.h" />
-    <ClInclude Include="projects\App_Steering\SteeringAgent.h" />
-    <ClInclude Include="projects\App_Steering\SteeringBehaviors.h" />
-    <ClInclude Include="projects\App_Steering\SteeringHelpers.h" />
-    <ClInclude Include="projects\Shared\Agario\AgarioAgent.h" />
-    <ClInclude Include="projects\Shared\Agario\AgarioContactListener.h" />
-    <ClInclude Include="projects\Shared\Agario\AgarioData.h" />
-    <ClInclude Include="projects\Shared\Agario\AgarioFood.h" />
     <ClInclude Include="projects\Shared\BaseAgent.h" />
     <ClInclude Include="projects\Shared\NavigationColliderElement.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
     <None Include="imgui.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
