--- a/GPP_Framework.vcxproj.filters
+++ b/GPP_Framework.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClCompile Include="framework\EliteUI\EImmediateUI.cpp" />
     <ClCompile Include="framework\EliteWindow\SDLWindow\SDLWindow.cpp" />
     <ClCompile Include="framework\main.cpp" />
+    <ClCompile Include="projects\App_FlowFields\FlowField.cpp" />
+    <ClCompile Include="projects\App_FlowFields\CostField.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="projects\App_Selector.h" />
@@ -90,6 +92,10 @@
     <ClInclude Include="framework\EliteWindow\SDLWindow\SDLWindow.h" />
     <ClInclude Include="framework\EliteWindow\EWindow.h" />
     <ClInclude Include="framework\EliteWindow\EWindowBase.h" />
+    <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphAlgorithms\EAStar.h" />
+    <ClInclude Include="framework\EliteAI\EliteGraphs\EliteGraphAlgorithms\EBFS.h" />
+    <ClInclude Include="projects\App_FlowFields\FlowField.h" />
+    <ClInclude Include="projects\App_FlowFields\CostField.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="imgui.ini" />
